--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="grid"></div>
+    <div class="container">
+        <button>Change grid size</button>
+        <div class="grid"></div>
+    </div>
 
     <script src="./javascript.js"></script>
 </body>
